# temporary-directory-cxx

./: CMakeLists.txt  README.md  temporary-directory-config.cmake.in
src/: CMakeLists.txt  temporary-directory.cpp  temporary-directory.hpp
tests/: CMakeLists.txt  tests.cpp
